tests/specs/ecosystem/ceagrass/cel/0_1_0.test
ceagrass/cel/0.1.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'HTMLElement'.
  children?: Array<HTMLElement | CreateElementOptions>;
                   ~~~~~~~~~~~
    at file://<tmpdir>/mod.ts:30:20

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
export function cel(options?: CreateElementOptions): HTMLElement {
                                                     ~~~~~~~~~~~
    at file://<tmpdir>/mod.ts:34:54

TS2304 [ERROR]: Cannot find name 'HTMLStyleElement'.
export function createStyle(options?: CreateStyleOptions): HTMLStyleElement {
                                                           ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/mod.ts:43:60

Found 3 errors.

error: Type checking failed.

